# rlbench-worldpilot-wan-pi05-latent-steering

./: .gitignore  CODEX_HANDOFF_FCRF_V1_HPC_4XH100.md  README.md  pyproject.toml  requirements.txt
docs/: EVAL_BLOCK12_PER_EVENT_V1_CHANGES.md  FCRF_V1_HPC_4XH100.md  data_format.md  worldpilot_alignment.md
scripts/: build_sample_index.sh  check_hpc_inputs.sh  check_openvla_oft_inputs.sh  eval_fcrf_v1_flow.sh  eval_online_rlbench_worldpilot_wan_pi05_torch.sh  eval_worldpilot_wan_pi05_torch.sh  export_wan_latent_cache.sh  hpc_paths_example.sh  run_block12_per_event_v1_rpc.sh  run_full_event_train_2node8_workspace.sh  run_online_rpc_eval_2node.sh  setup_env.sh  setup_openvla_oft_on_hpc.sh  smoke_fcrf_v1.sh  smoke_fuser_shapes.sh  smoke_online_eval_env.sh  smoke_openvla_oft_rlbench_data.sh  smoke_openvla_oft_shapes.sh  train_fcrf_v1_hpc_4xh100.sh  train_openvla_oft_rlbench.sh  train_worldpilot_wan_pi05_torch.sh  validate_wan_latent_cache.sh
src/rlbench_worldpilot_wan_pi05/: __init__.py  data.py  eval_online_rlbench.py  eval_online_rlbench_rpc.py  eval_online_rlbench_rpc_block12_per_event_v1.py  export_wan_latent_cache.py  fcrf.py  fusion.py  latent_cache.py  modeling.py  modeling_fcrf.py  online_policy.py  online_wan.py  openvla_oft_data.py  openvla_oft_steering.py  rlbench_online_utils.py  rpc_numpy.py  sample_index.py  serve_policy_rpc.py  serve_wan_latent_rpc.py  smoke_openvla_oft_shapes.py  smoke_shapes.py  train_fcrf_v1.py  train_openvla_oft_rlbench.py  train_torch.py  (+1 more)
tests/: smoke_fcrf_ddp.py  test_eval_online_rlbench_rpc_block12_per_event_v1.py  test_fcrf.py
